--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -33,13 +33,13 @@
                 <input type="text" placeholder="Search..." id="search_input">
                 <img src="img/user.jpg" alt="">
                 <div class="search">
-                    <a href="#" class="card">
+                    <!-- <a href="#" class="card">
                         <img src="img/the boys.jpg" alt="">
                         <div class="cont">
                             <h3>The Boys</h3>
                             <p>Action, 2021, <span>IMDB </span><ion-icon name="star-outline"></ion-icon> 9.6 </p>
                         </div>
-                    </a>
+                    </a> -->
                     
                     
                 </div>
@@ -51,7 +51,7 @@
             <div class="details">
                 <h6>Original da Netflix</h6>
                 <h5 id="gen">Drama</h5>
-                <h4>2017</h4>
+                <h4 id="date">2017</h4>
                 <h3 id="rate"><span>IMDB  </span><ion-icon name="star-outline"></ion-icon> 9.6</h3>
             </div>
             <div class="btns">
