configurando filtro de series

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         <a href="#">Home</a>
                     </li>
                     <li>
-                        <a href="#">Series</a>
+                        <a href="#" id="series">Series</a>
                     </li>
                     <li>
                         <a href="#">Filmes</a>
