--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
                 <img src="img/logo.png" alt="">
                 <ul>
                     <li>
-                        <a href="#">Home</a>
+                        <a href="/">Home</a>
                     </li>
                     <li>
                         <a href="#" id="series">Series</a>
                     </li>
                     <li>
-                        <a href="#">Filmes</a>
+                        <a href="#" id="filmes">Filmes</a>
                     </li>
                     <li>
-                        <a href="#">Animes</a>
+                        <a href="#" id="animes">Animes</a>
                     </li>
                 </ul>
             </div>
@@ -47,7 +47,7 @@
         </nav>
         <div class="content">
             <h1 id="title">La Casa de Papel</h1>
-            <p>Oito ladrões se trancam com reféns na Casa da Moeda da Espanha. Seu líder manipula a polícia para realizar um plano que pode ser o maior roubo da história ou uma missão em vão.</p>
+            <p>A Terra é habitada por super-heróis que são um inspiração para a humanidade. Porém, esses protetores têm um lado sinistro que a maioria das pessoas desconhece. Se eles usam seus poderes para o mal, Hughie, Billy e o resto do time devem detê-los.</p>
             <div class="details">
                 <h6>Original da Netflix</h6>
                 <h5 id="gen">Drama</h5>
