--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <h1 id="title">La Casa de Papel</h1>
             <p>A Terra é habitada por super-heróis que são um inspiração para a humanidade. Porém, esses protetores têm um lado sinistro que a maioria das pessoas desconhece. Se eles usam seus poderes para o mal, Hughie, Billy e o resto do time devem detê-los.</p>
             <div class="details">
-                <h6>Original da Netflix</h6>
+                <!-- <h6>Original da Netflix</h6> -->
                 <h5 id="gen">Drama</h5>
                 <h4 id="date">2017</h4>
                 <h3 id="rate"><span>IMDB  </span><ion-icon name="star-outline"></ion-icon> 9.6</h3>
