--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
         </nav>
         <div class="content">
-            <h1 id="title">La Casa de Papel</h1>
+            <h1 id="title">The Boys</h1>
             <p>A Terra é habitada por super-heróis que são um inspiração para a humanidade. Porém, esses protetores têm um lado sinistro que a maioria das pessoas desconhece. Se eles usam seus poderes para o mal, Hughie, Billy e o resto do time devem detê-los.</p>
             <div class="details">
                 <!-- <h6>Original da Netflix</h6> -->
