--- a/batemaporta.html
+++ b/batemaporta.html
@@ -46,7 +46,7 @@
             </div>
         </nav>
         <div class="content">
-            <h1 id="title">La Casa de Papel</h1>
+            <h1 id="title"></h1>
             <p>Durante as férias em uma cabana remota, uma jovem e seus pais são feitos reféns por quatro estranhos armados que exigem que a família faça uma escolha impensável para evitar o apocalipse.</p>
             <div class="details">
                 <!-- <h6>Original da Netflix</h6> -->
