--- a/abaleia.html
+++ b/abaleia.html
@@ -46,7 +46,7 @@
             </div>
         </nav>
         <div class="content">
-            <h1 id="title">A Baleia</h1>
+            <h1 id="title"></h1>
             <p>Homem obeso e solitário busca se reconectar com filha adolescente em uma última chance de redenção.</p>
             <div class="details">
                 <!-- <h6>Original da Netflix</h6> -->
