--- a/batman.html
+++ b/batman.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
-    <title>Batem a Porta || HomeFlix</title>
+    <title>The Batman || HomeFlix</title>
 </head>
 <body>
     <header>
@@ -46,7 +46,7 @@
             </div>
         </nav>
         <div class="content">
-            <h1 id="title">The Batman</h1>
+            <h1 id="title"></h1>
             <p>Após dois anos espreitando as ruas como Batman, Bruce Wayne se encontra nas profundezas mais sombrias de Gotham City. Com poucos aliados confiáveis, o vigilante solitário se estabelece como a personificação da vingança para a população.</p>
             <div class="details">
                 <!-- <h6>Original da Netflix</h6> -->
