--- a/batemaporta.html
+++ b/batemaporta.html
@@ -47,7 +47,7 @@
         </nav>
         <div class="content">
             <h1 id="title"></h1>
-            <p>Durante as férias em uma cabana remota, uma jovem e seus pais são feitos reféns por quatro estranhos armados que exigem que a família faça uma escolha impensável para evitar o apocalipse.</p>
+            <p>Durante as férias em uma cabana remota, uma jovem e seus pais são feitos reféns por quatro estranhos armados que exigem que a família faça uma escolha impensável </p>
             <div class="details">
                 <!-- <h6>Original da Netflix</h6> -->
                 <h5 id="gen">Drama</h5>
