--- a/batman.html
+++ b/batman.html
@@ -31,7 +31,7 @@
             </div>
             <div class="search_user">
                 <input type="text" placeholder="Search..." id="search_input">
-                <img src="img/user.jpg" alt="">
+                <!-- <img src="img/user.jpg" alt=""> -->
                 <div class="search">
                     <!-- <a href="#" class="card">
                         <img src="img/the boys.jpg" alt="">
@@ -47,7 +47,7 @@
         </nav>
         <div class="content">
             <h1 id="title"></h1>
-            <p>Após dois anos espreitando as ruas como Batman, Bruce Wayne se encontra nas profundezas mais sombrias de Gotham City. Com poucos aliados confiáveis, o vigilante solitário se estabelece como a personificação da vingança para a população.</p>
+            <p>Após dois anos espreitando as ruas como Batman, Bruce Wayne se encontra nas profundezas mais sombrias de Gotham City. </p>
             <div class="details">
                 <!-- <h6>Original da Netflix</h6> -->
                 <h5 id="gen">Drama</h5>
@@ -55,6 +55,10 @@
                 <h3 id="rate"><span>IMDB  </span><ion-icon name="star-outline"></ion-icon> 9.6</h3>
             </div>
             <div class="btns">
+                <!-- <a href="#" id="episodios">Episodio 01</a>
+                <a href="#" id="episodios">Episodio 01</a>
+                <a href="#" id="episodios">Episodio 01</a>
+                <a href="#" id="episodios">Episodio 01</a> -->
                 <a href="https://streamtape.com/v/jO2ozWwL6KszV4o/Batman_2022_1080p_WEB-DL_DUAL_5.1.mkv.mp4" target="_blank" id="play">Assitir <ion-icon name="play-outline"></ion-icon></a>
                 
             </div>
@@ -95,6 +99,7 @@
             });
 
             document.getElementById('title').innerText = filmes_array[0].name;
+            // document.getElementById('episodios').href = filmes_array[0].link
             document.getElementById('gen').innerText = filmes_array[0].genre;
             document.getElementById('date').innerText = filmes_array[0].date;
             document.getElementById('rate').innerHTML = `<span>IMDB  </span><ion-icon name="star-outline"></ion-icon> ${filmes_array[0].imdb}`;
