--- a/creed3.html
+++ b/creed3.html
@@ -47,7 +47,7 @@
         </nav>
         <div class="content">
             <h1 id="title"></h1>
-            <p>Depois de dominar os ringues, Adonis Creed tem prosperado com sua carreira e família. Quando um amigo de infância e ex-prodígio do boxe, Damian, ressurge após uma longa sentença na prisão, o campeão fica ansioso para provar que merece sua chance. </p>
+            <p>Depois de dominar os ringues, Adonis Creed tem prosperado com sua carreira e família. Quando um amigo de infância e ex-prodígio do boxe, Damian, ressurge.</p>
             <div class="details">
                 <!-- <h6>Original da Netflix</h6> -->
                 <h5 id="gen">Suspense</h5>
