--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
             <div class="search_user">
                 <input type="text" placeholder="Search..." id="search_input">
-                <img src="img/user.jpg" alt="">
+                <!-- <img src="img/user.jpg" alt=""> -->
                 <div class="search">
                     <!-- <a href="#" class="card">
                         <img src="img/the boys.jpg" alt="">
