adicionando filmes e trocando logo

--- a/corrosao.html
+++ b/corrosao.html
@@ -13,7 +13,7 @@
         <video src="video/Corrosão (2023)  Clipe Dublado  Netflix.mp4" autoplay muted></video>
         <nav>
             <div class="logo_ul">
-                <img src="img/logo.png" alt="">
+                <img src="img/homeflix.png" alt="">
                 <ul>
                     <li>
                         <a href="/">Home</a>
