--- a/abaleia.html
+++ b/abaleia.html
@@ -13,7 +13,7 @@
         <video src="video/A BALEIA Trailer Brasileiro Dublado (2023).mp4" autoplay muted></video>
         <nav>
             <div class="logo_ul">
-                <img src="img/logo.png" alt="">
+                <img src="img/homeflix.png" alt="">
                 <ul>
                     <li>
                         <a href="/">Home</a>
