--- a/batemaporta.html
+++ b/batemaporta.html
@@ -13,7 +13,7 @@
         <video src="video/Batem à Porta  Trailer 1 Oficial.mp4" autoplay muted></video>
         <nav>
             <div class="logo_ul">
-                <img src="img/logo.png" alt="">
+                <img src="img/homeflix.png" alt="">
                 <ul>
                     <li>
                         <a href="/">Home</a>
