--- a/batman.html
+++ b/batman.html
@@ -13,7 +13,7 @@
         <video src="video/BATMAN  Trailer 3 Oficial Dublado.mp4" autoplay muted></video>
         <nav>
             <div class="logo_ul">
-                <img src="img/logo.png" alt="">
+                <img src="img/homeflix.png" alt="">
                 <ul>
                     <li>
                         <a href="/">Home</a>
