--- a/dungeons.html
+++ b/dungeons.html
@@ -13,7 +13,7 @@
         <video src="video/Dungeons & Dragons -  Honra Entre Rebeldes  Trailer Final Dublado.mp4" autoplay muted></video>
         <nav>
             <div class="logo_ul">
-                <img src="img/logo.png" alt="">
+                <img src="img/homeflix.png" alt="">
                 <ul>
                     <li>
                         <a href="/">Home</a>
