--- a/gato-de-botas.html
+++ b/gato-de-botas.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
-    <title>Dungeons & Dragons || HomeFlix</title>
+    <title>Gato de Botas 2 || HomeFlix</title>
 </head>
 <body>
     <header>
         <video src="video/Gato de Botas 2 O Último Pedido  Trailer Oficial (Universal Pictures) HD.mp4" autoplay muted></video>
         <nav>
             <div class="logo_ul">
-                <img src="img/logo.png" alt="">
+                <img src="img/homeflix.png" alt="">
                 <ul>
                     <li>
                         <a href="/">Home</a>
