--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         
         <div class="content">
             <h1 id="title">The Batman</h1>
-            <p>Após dois anos espreitando as ruas como Batman, Bruce Wayne se encontra nas profundezas mais sombrias de Gotham City. Com poucos aliados confiáveis, o vigilante solitário se estabelece como a personificação da vingança para a população.</p>
+            <p>Após dois anos espreitando as ruas como Batman, Bruce Wayne se encontra nas profundezas mais sombrias de Gotham City.</p>
             <div class="details">
                 <!-- <h6>Original da Netflix</h6> -->
                 <h5 id="gen">Drama</h5>
