--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <video class="video" src="video/BATMAN  Trailer 3 Oficial Dublado.mp4" autoplay muted></video>
+        <video class="video" src="video/The Last of Us - Trailer Oficial.mp4" autoplay muted></video>
         <nav>
             <div class="logo_ul">
                 <img src="img/homeflix.png" alt="">
@@ -48,7 +48,7 @@
         
         <div class="content">
             <h1 id="title">The Batman</h1>
-            <p>Após dois anos espreitando as ruas como Batman, Bruce Wayne se encontra nas profundezas mais sombrias de Gotham City.</p>
+            <p>Joel, um sobrevivente duro e cínico, e a jovem e impetuosa Ellie se conectam pela dificuldade do mundo em que vivem.</p>
             <div class="details">
                 <!-- <h6>Original da Netflix</h6> -->
                 <h5 id="gen">Drama</h5>
@@ -56,7 +56,7 @@
                 <h3 id="rate"><span>IMDB  </span><ion-icon name="star-outline"></ion-icon> 9.6</h3>
             </div>
             <div class="btns">
-                <a href="https://streamtape.com/v/jO2ozWwL6KszV4o/Batman_2022_1080p_WEB-DL_DUAL_5.1.mkv.mp4" target="_blank" id="play">Assitir <ion-icon name="play-outline"></ion-icon></a>
+                <a href="thelastofus.html" target="_blank" id="play">Assitir <ion-icon name="play-outline"></ion-icon></a>
                 <a href="#" id="download_main"> <ion-icon name="cloud-download-outline"></ion-icon></a>
             </div>
         </div>
