--- a/shazam2.html
+++ b/shazam2.html
@@ -55,7 +55,7 @@
                 <h3 id="rate"><span>IMDB  </span><ion-icon name="star-outline"></ion-icon> 9.6</h3>
             </div>
             <div class="btns">
-                <a href="https://streamtape.com/v/g1WoyllJpQFYKD/Shazam_F%C3%BAria_dos_Deuses_2023_WEB-DL_1080p_x264_DUAL_5.1.mkv.mp4" target="_blank" id="play">Assitir <ion-icon name="play-outline"></ion-icon></a>
+                <a href="https://streamtape.com/v/6kMWJGLGwyh9Mjd/Shazam%21_F%C3%BAria_dos_Deuses_2023_1080p_WEB-DL_DUAL_5.1.mkv.mp4" target="_blank" id="play">Assitir <ion-icon name="play-outline"></ion-icon></a>
                 
             </div>
         </div>
