--- a/avatar2.html
+++ b/avatar2.html
@@ -55,7 +55,7 @@
                 <h3 id="rate"><span>IMDB  </span><ion-icon name="star-outline"></ion-icon> 9.6</h3>
             </div>
             <div class="btns">
-                <a href="https://streamtape.com/v/rD16LVzvW1CbBbB/Avatar_-_O_Caminho_da_%C3%81gua_2023" target="_blank" id="play">Assitir <ion-icon name="play-outline"></ion-icon></a>
+                <a href="https://streamtape.com/v/0Rj8z8prp1ubrk0/COMANDO.TO_-_Avatar_-_O_Caminho_da_%C3%81gua_2023_1080p_WEB-DL_DUAL_7.1.mkv.mp4" target="_blank" id="play">Assitir <ion-icon name="play-outline"></ion-icon></a>
                 
             </div>
         </div>
