tentando importar pedidos

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                     <li>
                         <a href="#" id="animes">Animes</a>
                     </li>
+                    <!-- <li>
+                        <a href="pedidos.html" id="pedido">Fazer PEDIDO</a>
+                    </li> -->
                 </ul>
             </div>
             <div class="search_user">
@@ -47,7 +50,7 @@
         </nav>
         
         <div class="content">
-            <h1 id="title">The Batman</h1>
+            <h1 id="title">The Last Of Us</h1>
             <p>Joel, um sobrevivente duro e cínico, e a jovem e impetuosa Ellie se conectam pela dificuldade do mundo em que vivem.</p>
             <div class="details">
                 <!-- <h6>Original da Netflix</h6> -->
